force-app/main/default/objects/SDG__c/SDG__c.object-meta.xml
<CustomObject>
    <label>Sortable Data Grid</label>
    <nameField>
        <label>SDG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sortable Data Grids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>