force-app/main/default/objects/SDG__c/fields/Default_Sort__c.field-meta.xml
<CustomField>
    <fullName>Default_Sort__c</fullName>
    <inlineHelpText>Provides automatic sorting for the grid.  example: Name Asc</inlineHelpText>
    <label>Default Sort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>