force-app/main/default/objects/SDG__c/fields/Enable_Inline_Edit__c.field-meta.xml
<CustomField>
    <fullName>Enable_Inline_Edit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use this field to enable/disbale inline editing in the SDG.</description>
    <label>Enable Inline Edit</label>
    <type>Checkbox</type>
</CustomField>