force-app/main/default/objects/SDG__c/fields/Grouping_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Field_API__c</fullName>
    <description>Use this field to display summarized data based on the values of a picklist field in a grid.</description>
    <label>Grouping Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>