force-app/main/default/objects/SDG__c/fields/Highlight_Colors__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Colors__c</fullName>
    <label>Highlight Colors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>