force-app/main/default/objects/SDG__c/fields/List_View_Name__c.field-meta.xml
<CustomField>
    <fullName>List_View_Name__c</fullName>
    <description>Use this field to specify the API Name of the Lightning List View. The SDG will then inherit the filter conditions applied for that List View.
Note: For an SDG, user can either fill &apos;Filter&apos; or &apos;List View Name&apos;.</description>
    <label>List View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>