force-app/main/default/objects/SDG__c/fields/Related_Association_Query__c.field-meta.xml
<CustomField>
    <fullName>Related_Association_Query__c</fullName>
    <label>Related Association Query</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>