force-app/main/default/objects/SDG__c/fields/Remember_Filter__c.field-meta.xml
<CustomField>
    <fullName>Remember_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remember Filter</label>
    <type>Checkbox</type>
</CustomField>