force-app/main/default/objects/SDG__c/validationRules/ListViewName_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>ListViewName_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(List_View_Name__c)) &amp;&amp; NOT(ISBLANK( Filter__c ))</errorConditionFormula>
    <errorMessage>You can either fill &apos;Filter&apos; or &apos;List View Name&apos; to save the record.</errorMessage>
</ValidationRule>