force-app/main/default/objects/SDG__c/validationRules/Make_sObjectName_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_sObjectName_Mandatory</fullName>
    <active>true</active>
    <description>sObjectName is mandatory</description>
    <errorConditionFormula>ISBLANK( sObjectName__c )</errorConditionFormula>
    <errorMessage>sObjectName is mandatory</errorMessage>
</ValidationRule>