force-app/main/default/objects/SDG__c/validationRules/Valid_sObject_for_Editable_SDG.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_sObject_for_Editable_SDG</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    Enable_Inline_Edit__c,
    CONTAINS(
        LOWER($Label.navpeii__invalid_sobject_for_editable_sdg),
        LOWER(sObjectName__c)
    )
)</errorConditionFormula>
    <errorDisplayField>Enable_Inline_Edit__c</errorDisplayField>
    <errorMessage>Inline editing is restricted for this object.</errorMessage>
</ValidationRule>