force-app/main/default/objects/SDG__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>